--- a/src/TraderVoyagesUI/index.html
+++ b/src/TraderVoyagesUI/index.html
@@ -14,7 +14,7 @@
     <title>Trader Voyages</title>
   </head>
   <body>
-    <div id="root" class="min-h-screen bg-black text-white font-sans"></div>
+    <div id="root" class="font-sans"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
